<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:text="@string/Register"
        android:textSize="50sp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/firstName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:autofillHints="name"
        android:hint="@string/firstName"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="202dp"
        android:layout_height="57dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"
        android:autofillHints="name"
        android:hint="@string/lastName"
        android:inputType="textPersonName" />

    <EditText
        android:layout_width="202dp"
        android:layout_height="57dp"
        android:id ="@+id/DOB"
        android:hint="@string/DOB"
        android:autofillHints="no"
        android:layout_marginTop="300dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:inputType="date"/>

    <EditText
        android:id="@+id/emailAddressET2"
        android:layout_width="202dp"
        android:layout_height="57dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="360dp"
        android:autofillHints="emailAddress"
        android:hint="@string/EmailAddressText"
        android:inputType="textEmailAddress|textEmailSubject" />

    <EditText
        android:layout_width="202dp"
        android:layout_height="57dp"
        android:id ="@+id/PasswordET2"
        android:hint="@string/PasswordText"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="420dp"/>

    <Button
        android:id="@+id/registerBtn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="500dp"
        android:text="@string/registerTVBTN" />
</RelativeLayout>