<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="You've Earned: $0"
        android:textSize="45sp" />

    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Score"
        android:layout_centerHorizontal="true"
        android:text="@string/Questions"
        android:textSize="20sp"
        android:layout_above="@id/radioGroup"
        android:textAlignment="center"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Option1"
            android:textSize="20sp"
            android:layout_marginTop="50dp"
            />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Option2"
            android:textSize="20sp"
            android:layout_marginTop="50dp" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Option3"
            android:textSize="20sp"
            android:layout_marginTop="50dp"/>

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Option4"
            android:textSize="20sp"
            android:layout_marginTop="50dp" />


    </RadioGroup>

    <Button
        android:id="@+id/Confirmbutton"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@id/radioGroup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/Confirm"
        android:textAlignment="center"
        android:textSize="20sp" />

</RelativeLayout>